[gd_scene load_steps=11 format=3 uid="uid://cirijqchloi1o"]

[ext_resource type="Script" uid="uid://bmvlewxm6xya0" path="res://scripts/common/game_over.gd" id="1_40pha"]
[ext_resource type="Texture2D" uid="uid://c82pnhepxts7y" path="res://assets/menus/mapa_bg.png" id="2_4qfck"]
[ext_resource type="Theme" uid="uid://cxf4vi0rbjosd" path="res://shaders/subtitle2_intro_theme.tres" id="2_flvnf"]
[ext_resource type="AudioStream" uid="uid://dvsucwgh8qpc" path="res://sounds/game over.mp3" id="5_40pha"]
[ext_resource type="Theme" uid="uid://ckpnhtgdjvgmd" path="res://shaders/primary_btn_theme.tres" id="5_ffci5"]

[sub_resource type="Animation" id="Animation_vt17n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_asxd2"]
resource_name = "reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(421, 750), Vector2(421, 450)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ei4xi"]
_data = {
&"RESET": SubResource("Animation_vt17n"),
&"reveal": SubResource("Animation_asxd2")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_w6t7d"]
color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_gq33n"]
HSeparator/styles/separator = SubResource("StyleBoxLine_w6t7d")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_40pha")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_flvnf")
texture = ExtResource("2_4qfck")
expand_mode = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ei4xi")
}
autoplay = "reveal"

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = 68.5
offset_right = 163.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
alignment = 1

[node name="retry_btn" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_ffci5")
text = "RECOMEÃ‡AR"

[node name="HSeparator" type="HSeparator" parent="buttons"]
custom_minimum_size = Vector2(100, 1)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gq33n")

[node name="quit_btn" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_ffci5")
text = "SAIR DO JOGO"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -121.0
offset_right = 264.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.015686275, 0.015686275, 1)
theme_override_colors/font_outline_color = Color(0.7764706, 0.21960784, 0.8784314, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 96
text = "GAME OVER"

[node name="game_over_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_40pha")

[connection signal="pressed" from="buttons/retry_btn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="buttons/quit_btn" to="." method="_on_quit_btn_pressed"]
